SERVER-36439 Fix the concurrency control of the LogicalTimeValidator